<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:k7ui="http://schemas.android.com/apk/res-auto/com.eebbk.mingming.k7ui"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        >
        
        <Button
            android:id="@+id/btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/prev"
            >
        </Button>
        
        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/btn_prev"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/next"
            >
        </Button>
        
        
        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/btn_prev"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/add"
            >
        </Button>
        
        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_prev"
            android:layout_toRightOf="@+id/btn_add"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/delete"
            >
        </Button>
        
        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_prev"
            android:layout_toRightOf="@+id/btn_delete"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/update"
            >
        </Button>
        
        <SeekBar 
    	    android:id="@+id/sb_duration"
    	    android:layout_width="400dp"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:layout_marginTop="20dp"
        	android:layout_alignParentLeft="true"
        	android:layout_below="@+id/btn_add"
        	android:max="3000"
        	android:progress="0"
    	    >
    	</SeekBar>
        
        
        <Spinner
            android:id="@+id/sp_effect"
        	android:layout_width="200dp"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="20dp"
        	android:layout_marginTop="20dp"
        	android:layout_alignParentRight="true"
        	android:layout_alignParentTop="true"
        	>
        </Spinner>
        
    	<Spinner
            android:id="@+id/sp_type"
        	android:layout_width="200dp"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="20dp"
        	android:layout_marginTop="20dp"
        	android:layout_below="@+id/sp_effect"
        	android:layout_alignParentRight="true"
        	>
        </Spinner>
        
    	<CheckBox 
        	android:id="@+id/cb_loop"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="20dp"
        	android:layout_marginTop="20dp"
        	android:layout_below="@+id/sp_type"
        	android:layout_alignParentRight="true"
        	android:gravity="center_vertical|left"
        	android:text="@string/loop"
        	android:textSize="18sp"
        	android:textColor="#ff000000"
        	android:singleLine="true"
        	>
    	</CheckBox>
        
    </RelativeLayout>
	
    
    <com.eebbk.mingming.k7ui.effect.view.EffectPageContainer
        android:id="@+id/page_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        k7ui:k7uiepcUseGL="false"
        k7ui:k7uiepcEffector="DoubleFaceFlipEffector"
        k7ui:k7uiepcOrientation="horizontal"
        k7ui:k7uiepcLoopShow="false"
        k7ui:k7uiepcScrollLevel="all"
        >
    </com.eebbk.mingming.k7ui.effect.view.EffectPageContainer>

</LinearLayout>