<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    
    <!--  android:background="#ff96fabc" -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:background="#ff96fabc"
        >
    	
        <FrameLayout
        	android:id="@+id/effect_view_container"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:layout_centerInParent="true" 
        	>
    	</FrameLayout>
    	
        <include
            android:id="@+id/src_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:visibility="visible"
            layout="@layout/effect_test_view" 
            />

        <include
            android:id="@+id/dst_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:visibility="invisible"
            layout="@layout/effect_test_view" 
            />
    	
    </RelativeLayout>
    
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:visibility="visible"
        >
    	
    	<Spinner
            android:id="@+id/sp_effector"
        	android:layout_width="200dp"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:layout_marginTop="20dp"
        	android:layout_alignParentLeft="true"
        	android:layout_alignParentTop="true"
        	>
        </Spinner>
        
    	<Spinner
            android:id="@+id/sp_type"
        	android:layout_width="200dp"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:layout_marginTop="20dp"
        	android:layout_below="@+id/sp_effector"
        	android:layout_alignParentLeft="true"
        	>
        </Spinner>
        
    	<Spinner
            android:id="@+id/sp_fill"
        	android:layout_width="200dp"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:layout_marginTop="20dp"
        	android:layout_below="@+id/sp_type"
        	android:layout_alignParentLeft="true"
        	>
        </Spinner>
        
    	<SeekBar 
    	    android:id="@+id/sb_effect_factor"
    	    android:layout_width="300dp"
        	android:layout_height="wrap_content"
        	android:layout_marginLeft="20dp"
        	android:layout_marginTop="20dp"
        	android:layout_alignParentLeft="true"
        	android:layout_below="@+id/sp_fill"
        	android:max="100"
        	android:progress="0"
    	    >
    	</SeekBar>
        
    	
    	<CheckBox 
        	android:id="@+id/cb_high_quality"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="20dp"
        	android:layout_alignParentTop="true"
        	android:layout_alignParentRight="true"
        	android:gravity="center_vertical|left"
        	android:text="@string/quality"
        	android:textSize="18sp"
        	android:textColor="#ff000000"
        	android:singleLine="true"
        	>
    	</CheckBox>
    	
    	<CheckBox 
        	android:id="@+id/cb_reverse"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="20dp"
        	android:layout_alignParentRight="true"
        	android:layout_below="@+id/cb_high_quality"
        	android:gravity="center_vertical|left"
        	android:text="@string/reverse"
        	android:textSize="18sp"
        	android:textColor="#ff000000"
        	android:singleLine="true"
        	>
    	</CheckBox>
    	
    	<CheckBox 
        	android:id="@+id/cb_fill"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="20dp"
        	android:layout_alignParentRight="true"
        	android:layout_below="@+id/cb_reverse"
        	android:gravity="center_vertical|left"
        	android:text="@string/fill"
        	android:textSize="18sp"
        	android:textColor="#ff000000"
        	android:singleLine="true"
        	>
    	</CheckBox>
    	
    	<CheckBox 
        	android:id="@+id/cb_show"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="20dp"
        	android:layout_alignParentRight="true"
        	android:layout_below="@+id/cb_fill"
        	android:gravity="center_vertical|left"
        	android:text="Show"
        	android:textSize="18sp"
        	android:textColor="#ff000000"
        	android:singleLine="true"
        	/>
    	
		<Button 
        	android:id="@+id/btn_capture"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="20dp"
        	android:layout_alignParentRight="true"
        	android:layout_below="@+id/cb_show"
        	android:gravity="center_vertical|left"
        	android:text="Capture"
        	android:textSize="18sp"
        	android:textColor="#ff000000"
        	android:singleLine="true"
        	/>
        
    </RelativeLayout>

</FrameLayout>